# prelude-taillights

./: .gitignore  .gitmodules  fp-info-cache  fp-lib-table  front_leds.kicad_sch  ludeled-cache.lib  ludeled.kicad_pcb  ludeled.kicad_pcb-bak  ludeled.kicad_prl  ludeled.kicad_pro  ludeled.kicad_sch  ludeled.sch  ludeled.sch-bak  sym-lib-table
driver-brake-tail/: driver-brake-tail.kicad_pro  driver-brake-tail.kicad_sch  driver-brake-tail.sch  front_leds.kicad_sch  front_leds.sch
mcu/tails/: CMakeLists.txt  flash.sh  make-and-flash.sh
mcu/tails/inc/: lwipopts.h  util.h
mcu/tails/src/: main.cpp
mcu/tails/ws2812/: color.hpp  led_matrix.cpp  led_matrix.hpp  ws281x.cpp  ws281x.hpp
showtails-controller/: showtails-controller.kicad_pro
